Encode file paths when creating resource URLs
Encode filesystem paths through URI before constructing a resource URL.
The old unescaped form treats filename characters as URL syntax.

All eight focused cases and full Java 8/21 verify pass. The tests reject
both develop's broken filename handling and #846's extra symlink
canonicalisation policy. Preserve classpath lookup and fallback behaviour.

Extract the URL encoding fix from #846 without real-path resolution.